--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
   <header>
+
+    <!--Навігація-->
     <nav>
       <ul>
-        <li><a href="/goit-markup-hw-01/index.html">WebStudio</a></li>
+        <li><a lang="en" href="./index.html">WebStudio</a></li>
         <li><a href="">Студія</a></li>
         <li><a href="">Портфоліо</a></li>
         <li><a href="">Контакти</a></li>
@@ -22,12 +24,17 @@
       <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
   </header>
+  <main>
+
   <!--Банер-->
+
 <section>
   <h1>Ефективні рішення для вашого бізнесу</h1>
   <button type="button">Замовити послугу</button>
 </section>
+
 <!--Переваги-->
+
 <section>
 <h2>Переваги</h2>
 <ul>
@@ -52,17 +59,60 @@
   </li>
 </ul>
 </section>
+
 <!--Чим ми займаємося-->
+
   <section>
     <h2>Чим ми займаємося</h2>
     <ul>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li><img src="./images/box1.jpg" alt="робота з кодом" width="370"></li>
+      <li><img src="./images/box2.jpg" alt="робота з мобільним додатком" width="370"></li>
+      <li><img src="./images/box3.jpg" alt="робота з дизайном та палітрою" width="370"></li>
     </ul>
   </section>
 
-  <footer></footer>
+<!--Наша команда-->
+
+<section>
+  <h2>Наша команда</h2>
+  <ul>
+    <li>
+      <figure>
+        <img src="./images/igor.jpg" alt="Ігор Дем'яненко" width="270" />
+        <figcaption>Ігор Дем'яненко <span lang="en">Product Designer</span></figcaption>
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <img src="./images/olga.jpg" alt="Ольга Рєпіна" width="270" />
+        <figcaption>Ольга Рєпіна <span lang="en">Frontend Developer</span></figcaption>
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <img src="./images/mikola.jpg" alt="Микола Тарасов" width="270" />
+        <figcaption>Микола Тарасов <span lang="en">Marketing</span></figcaption>
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <img src="./images/mihaylo.jpg" alt="Михайло Єрмаков" width="270" />
+        <figcaption>Микола Єрмаков <span lang="en">UI Designer</span></figcaption>
+    </figure>
+    </li>
+  </ul>
+</section>
+</main>
+  <footer>
+    <a lang="en" href="./index.html">WebStudio</a>
+    <address>
+      м.Київ, пр-т Лесі Українки, 26
+    </address>
+    <address>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
+      <a href="tel:+380961111111">+38 096 111 11 11</a>
+    </address>
+  </footer>
 
 </body>
 </html>
