--- a/index.html
+++ b/index.html
@@ -1,118 +1,141 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Студія</title>
-</head>
-<body>
-  <header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Студія</title>
+  </head>
+  <body>
+    <header>
+      <!--Навігація-->
+      <nav>
+        <a lang="en" href="./index.html">Web<span>Studio</span></a>
+        <ul>
+          <li><a href="./index.html">Студія</a></li>
+          <li><a href="#">Портфоліо</a></li>
+          <li><a href="#">Контакти</a></li>
+        </ul>
+      </nav>
 
-    <!--Навігація-->
-    <nav>
       <ul>
-        <li><a lang="en" href="./index.html">WebStudio</a></li>
-        <li><a href="">Студія</a></li>
-        <li><a href="">Портфоліо</a></li>
-        <li><a href="">Контакти</a></li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
-    </nav>
+    </header>
+    <main>
+      <!--Банер-->
 
-    <ul>
-      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-    </ul>
-  </header>
-  <main>
+      <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+      </section>
 
-  <!--Банер-->
+      <!--Переваги-->
 
-<section>
-  <h1>Ефективні рішення для вашого бізнесу</h1>
-  <button type="button">Замовити послугу</button>
-</section>
+      <section>
+        <h2>Переваги</h2>
+        <ul>
+          <li>
+            <h3>увага до деталей</h3>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
+          </li>
 
-<!--Переваги-->
+          <li>
+            <h3>пунктуальність</h3>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
+          </li>
 
-<section>
-<h2>Переваги</h2>
-<ul>
-  <li>
-    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-  </li>
+          <li>
+            <h3>планування</h3>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
 
-  <li>
-    <h3>ПУНКТУАЛЬНІСТЬ</h3>
-    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-  </li>
+          <li>
+            <h3>сучасні технології</h3>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
+          </li>
+        </ul>
+      </section>
 
-  <li>
-    <h3>ПЛАНУВАННЯ</h3>
-    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-  </li>
+      <!--Чим ми займаємося-->
 
-  <li>
-    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-  </li>
-</ul>
-</section>
+      <section>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li>
+            <img src="./images/box1.jpg" alt="робота з кодом" width="370" />
+          </li>
+          <li>
+            <img
+              src="./images/box2.jpg"
+              alt="робота з мобільним додатком"
+              width="370"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/box3.jpg"
+              alt="робота з дизайном та палітрою"
+              width="370"
+            />
+          </li>
+        </ul>
+      </section>
 
-<!--Чим ми займаємося-->
+      <!--Наша команда-->
 
-  <section>
-    <h2>Чим ми займаємося</h2>
-    <ul>
-      <li><img src="./images/box1.jpg" alt="робота з кодом" width="370"></li>
-      <li><img src="./images/box2.jpg" alt="робота з мобільним додатком" width="370"></li>
-      <li><img src="./images/box3.jpg" alt="робота з дизайном та палітрою" width="370"></li>
-    </ul>
-  </section>
-
-<!--Наша команда-->
-
-<section>
-  <h2>Наша команда</h2>
-  <ul>
-    <li>
-      <figure>
-        <img src="./images/igor.jpg" alt="Ігор Дем'яненко" width="270" />
-        <figcaption>Ігор Дем'яненко <span lang="en">Product Designer</span></figcaption>
-      </figure>
-    </li>
-    <li>
-      <figure>
-        <img src="./images/olga.jpg" alt="Ольга Рєпіна" width="270" />
-        <figcaption>Ольга Рєпіна <span lang="en">Frontend Developer</span></figcaption>
-      </figure>
-    </li>
-    <li>
-      <figure>
-        <img src="./images/mikola.jpg" alt="Микола Тарасов" width="270" />
-        <figcaption>Микола Тарасов <span lang="en">Marketing</span></figcaption>
-      </figure>
-    </li>
-    <li>
-      <figure>
-        <img src="./images/mihaylo.jpg" alt="Михайло Єрмаков" width="270" />
-        <figcaption>Микола Єрмаков <span lang="en">UI Designer</span></figcaption>
-    </figure>
-    </li>
-  </ul>
-</section>
-</main>
-  <footer>
-    <a lang="en" href="./index.html">WebStudio</a>
-    <address>
-      м.Київ, пр-т Лесі Українки, 26
-    </address>
-    <address>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a><br>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
-    </address>
-  </footer>
-
-</body>
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+              <img src="./images/igor.jpg" alt="Ігор Дем'яненко" width="270" />
+                <h3>Ігор Дем'яненко</h3> 
+                <p lang="en">Product Designer</p>
+          </li>
+          <li>
+              <img src="./images/olga.jpg" alt="Ольга Рєпіна" width="270" />
+                <h3>Ольга Рєпіна</h3> 
+                <p lang="en">Frontend Developer</p>
+          </li>
+          <li>
+              <img src="./images/mikola.jpg" alt="Микола Тарасов" width="270" />
+                <h3>Микола Тарасов</h3> 
+                <p lang="en">Marketing</p>
+          </li>
+          <li>
+              <img
+                src="./images/mihaylo.jpg"
+                alt="Михайло Єрмаков"
+                width="270"
+              />
+                <h3>Микола Єрмаков</h3> 
+                <p lang="en">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a lang="en" href="./index.html">Web<span>Studio</span></a>
+      <address>
+        <ul>
+          <li><a href="https://goo.gl/maps/BaobwJiwFPhVXWJy6" target="_blank" rel="noopener noreferrer nofollow"> 
+            м.Київ, пр-т Лесі Українки, 26</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+      </address>
+    </footer>
+  </body>
 </html>
